--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "json-server": "^1.0.0-beta.0",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "react": "^18",
